--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
   <!--
      kartikatripathi077@gmail.com
-     lakmelakme
+     244712@lakme
     -->
     <groupId>referal</groupId>
     <artifactId>EmployeeReferal</artifactId>
